Fix People cards in dark mode

--- a/css/custom.css
+++ b/css/custom.css
@@ -449,3 +449,17 @@ select.filter {
 [data-theme="dark"] .table-hover tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.075);
 }
+
+/* People cards styling */
+.people-card {
+  margin: 0px;
+  padding: 0px;
+  background-color: transparent !important;
+  border: 0;
+  box-shadow: none;
+}
+
+.people-card .card-body {
+  padding-top: 10px;
+  padding-bottom: 0px;
+}
